# trading-r1-qflib

./: .gitignore  .gitmodules  README.md  crawl_news.py  llms.txt  pyproject.toml  qflib-r1-30day-roadmap.html  validate_data.py
compare_lab/: __init__.py  _paths.py  analyst_revision_ic.py  analyze_results.py  backtest.py  broker_event_study.py  build_memo_report.py  build_oos150_eval.py  build_oos150_summ_eval.py  cache_io.py  ceiling_probe.py  cocoverage_momentum_ic.py  cocoverage_pit_ic.py  compare_paper.py  compute_ic.py  config.py  cost_haircut_backtest.py  cvar_conformal_backtest.py  cvar_control_generality.py  encoder_ablation.py  eval_labels.py  fetch_cocoverage_data.py  fetch_finnhub_news.py  fetch_finnhub_profiles.py  fetch_pit_finnhub.py  fetch_pit_prices.py  fetch_upgrade_downgrade.py  fetch_yf_volume.py  fundamentals_pit.py  gbm_ceiling.py  infer_ic.py  insider_pit.py  labeling.py  leadlag_bigsmall_ic.py  llm_client.py  macro_pit.py  make_report.py  metrics.py  multimodal_context.py  oracle_check.py  (+10 more)
docs/: 2026-06-21-three-way-comparison-memo.md  2026-06-29-results-report.html  2026-06-30-gbm-llm-proxy-validity.md  2026-06-30-jiwoong-reward-rebuttal.md  2026-06-30-llm-training-methods-survey.md  2026-07-01-top150-learning-curve-experiment.md  2026-07-03-distillation-v3-lit.md  2026-07-03-why-the-ceiling.md  2026-07-04-distillation-v31-design.md  2026-07-05-paper-coverage-gap.md  2026-07-06-analyst-revision-signal.md  2026-07-06-post-ceiling-roadmap.md  2026-07-07-final-synthesis.md  2026-07-17-cvar-conformal-control.md  2026-07-18-free-reprocessing-batch.md  (+13 more)
(+60 files in other folders)
